--- a/page/templates/page/news_list.html
+++ b/page/templates/page/news_list.html
@@ -10,36 +10,55 @@
 </head>
 
 <body>
-    <div class="page-header">
-        <a href="/"><img src="{% static 'img/Erial_logo.png' %}" alt=""></a>
+    <div class='col-xs'>
+        <div class="page-header">
+            <a href="/"><img src="{% static 'img/Erial_logo.png' %}" alt=""></a>
+        </div>
     </div>
     <div class="content container">
-        <div class="d-flex flex-row justify-content-between">
-            <div class="block">
-                <a href='https://news.rambler.ru/'><img src="{% static 'img/logo_ru.png' %}" alt=""></a>
-                <ol class='square'>
-                    {% for new in news %}
-                    {% if new.site == 'Rambler' %}
-                    <div class='news'>
-                        <li><a href='{{ new.link }}' class='news-item__title'>{{ new.title }}</a>
-                    </div>
-                    {% endif %}
-                    {% endfor %}
-                </ol>
+        <div class="row">
+            <div class='col-xs mr-2 ml-2'>
+                <div class="block">
+                    <a href='https://news.rambler.ru/'><img src="{% static 'img/logo_ru.png' %}" alt=""></a>
+                    <ol class='square'>
+                        {% for new in news %}
+                        {% if new.site == 'Rambler' %}
+                        <div class='news'>
+                            <li><a href='{{ new.link }}' class='news-item__title'>{{ new.title }}</a>
+                        </div>
+                        {% endif %}
+                        {% endfor %}
+                    </ol>
+                </div>
             </div>
-            <div class="block">
-                <a href='https://ria.ru/'><img src="{% static 'img/logo.png' %}" alt=""></a>
-                <ol class='square'>
-                    {% for new in news %}
-                    {% if new.site == 'Ria' %}
-                    <div class='news'>
-                        <li><a href='{{ new.link }}' class='news-item__title'>{{ new.title }}</a>
-                    </div>
-                    {% endif %}
-                    {% endfor %}
-                </ol>
+            <div class='col-xs mr-2 ml-2'>
+                <div class="block">
+                    <a href='https://ria.ru/'><img src="{% static 'img/logo.png' %}" alt=""></a>
+                    <ol class='square'>
+                        {% for new in news %}
+                        {% if new.site == 'Ria' %}
+                        <div class='news'>
+                            <li><a href='{{ new.link }}' class='news-item__title'>{{ new.title }}</a>
+                        </div>
+                        {% endif %}
+                        {% endfor %}
+                    </ol>
+                </div>
             </div>
-
+            <div class='col-xs mr-2 ml-2'>
+                <div class="block">
+                    <a href='https://lenta.ru/'><img src="{% static 'img/logo_lenta.png' %}" alt=""></a>
+                    <ol class='square'>
+                        {% for new in news %}
+                        {% if new.site == 'Lenta' %}
+                        <div class='news'>
+                            <li><a href='{{ new.link }}' class='news-item__title'>{{ new.title }}</a>
+                        </div>
+                        {% endif %}
+                        {% endfor %}
+                    </ol>
+                </div>
+            </div>
         </div>
     </div>
 </body>
