--- a/page/templates/page/news_list.html
+++ b/page/templates/page/news_list.html
@@ -10,13 +10,15 @@
 </head>
 
 <body>
-    <div class='col-xs'>
-        <div class="page-header">
-            <a href="/"><img src="{% static 'img/Erial_logo.png' %}" alt=""></a>
+    <div class="row">
+        <div class='col-md-12'>
+            <div class="page-header">
+                <a href="/"><img src="{% static 'img/Erial_logo.png' %}" alt=""></a>
+            </div>
         </div>
     </div>
     <div class="content container">
-        <div class="row">
+        <div class="row my-auto">
             <div class='col-xs mr-2 ml-2'>
                 <div class="block">
                     <a href='https://news.rambler.ru/'><img src="{% static 'img/logo_ru.png' %}" alt=""></a>
