--- a/page/static/css/page_news.css
+++ b/page/static/css/page_news.css
@@ -16,7 +16,8 @@ h1, h2, h3, h4 {
 }
 
 .content {
-    margin-left: 40px;
+    margin-left: auto;
+    margin-right: auto;
     align-items: center;
 }
 
