--- a/page/templates/page/news_list.html
+++ b/page/templates/page/news_list.html
@@ -19,7 +19,7 @@
     </div>
     <div class="content container">
         <div class="row my-auto">
-            <div class='col-xs mr-2 ml-2'>
+            <div class='col-sm'>
                 <div class="block">
                     <a href='https://news.rambler.ru/'><img src="{% static 'img/logo_ru.png' %}" alt=""></a>
                     <ol class='square'>
@@ -33,7 +33,7 @@
                     </ol>
                 </div>
             </div>
-            <div class='col-xs mr-2 ml-2'>
+            <div class='col-sm'>
                 <div class="block">
                     <a href='https://ria.ru/'><img src="{% static 'img/logo.png' %}" alt=""></a>
                     <ol class='square'>
@@ -47,7 +47,7 @@
                     </ol>
                 </div>
             </div>
-            <div class='col-xs mr-2 ml-2'>
+            <div class='col-sm'>
                 <div class="block">
                     <a href='https://lenta.ru/'><img src="{% static 'img/logo_lenta.png' %}" alt=""></a>
                     <ol class='square'>
