--- a/page/templates/page/news_list.html
+++ b/page/templates/page/news_list.html
@@ -11,9 +11,9 @@
 
 <body>
     <div class="row">
-        <div class='col-md-12'>
+        <div class='col-md'>
             <div class="page-header">
-                <a href="/"><img src="{% static 'img/Erial_logo.png' %}" alt=""></a>
+                <h1><a href="/">Erial!!!</a></h1>
             </div>
         </div>
     </div>
