--- a/page/static/css/page_news.css
+++ b/page/static/css/page_news.css
@@ -8,6 +8,20 @@
     
 @font-face { font-family: 'Arciform';  src: local('Arciform'), url('https://nomail.com.ua/files/woff/705300e6d1053351171e258adc55c2ac.woff') format('woff'); }
 
+body {
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: #f2f2f2;
+}
+
+.container {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 28px 16px 32px 16px;
+    background-color: #fff;
+    border-bottom: 1px solid #dcdcdc;
+    box-shadow: 0px 6px 12px 0px rgba(50,50,50,.1);
+}
+
 .page-header {
     background-color: rgb(2, 174, 241);
     margin-top: 0;
@@ -38,6 +52,7 @@
     width: 100px;
     padding-top: 10px;
     padding-bottom: 10px;
+    padding-left: 10;
     opacity: 1;
 }
   
@@ -58,9 +73,9 @@
 }
 
 .news-item__title {
-    font-size: 15px;
-    line-height: 10px;
-    color: black;
+    font-size: 12px;
+    line-height: 1.5;
+    color: #222;
 }
 
 .square {
@@ -69,11 +84,12 @@
     list-style: none;
     background:rgb(255, 255, 255);
     padding: 10px;
+    align-items: center;
 }
 .square li {
     position: relative;
     margin: 0 0 10px 2em;
-    padding: 4px 8px;
+    padding: 1px 8px;
     border-top: 2px solid rgb(2, 174, 241);
     transition: .3s linear;
 }
@@ -87,7 +103,7 @@
     width: 2em;
     box-sizing: border-box;
     margin-right: 8px;
-    padding: 4px;
+    padding: 1px;
     border-top: 2px solid rgb(2, 174, 241);
     border-left: 2px solid transparent;
     border-right: 2px solid transparent;
@@ -98,7 +114,15 @@
     text-align: center;
     transition: .3s linear;
 }
-.square li:hover {border-top: 2px solid white;}
+.square li:hover {
+    border-top: 2px solid white;
+}
+
+.square a:hover {
+    color: rgb(2, 174, 241);
+    text-decoration: none;
+}
+
 .square li:hover:before {
     border: 2px solid white;
     background: white;
