--- a/page/static/css/page_news.css
+++ b/page/static/css/page_news.css
@@ -10,33 +10,16 @@
 
 body {
     font-family: Arial, Helvetica, sans-serif;
-    background-color: #f2f2f2;
+    background-color: #E8E8E8;
 }
 
 .container {
     max-width: 1200px;
     margin: 0 auto;
     padding: 28px 16px 32px 16px;
-    background-color: #fff;
+    background-color: #E8E8E8;
     border-bottom: 1px solid #dcdcdc;
     box-shadow: 0px 6px 12px 0px rgba(50,50,50,.1);
-}
-
-.page-header {
-    background-color: rgb(2, 174, 241);
-    margin-top: 0;
-    padding: 10px 10px 10px 40px;
-    text-align: center;
-}
-
-.page-header h1 {
-    font-family: Arciform;
-}
-
-.page-header h1, .page-header h1 a, .page-header h1 a:visited, .page-header h1 a:active{
-    color: white;
-    font-size: 35pt;
-    text-decoration: none;
 }
 
 .content {
@@ -75,14 +58,14 @@ body {
 .news-item__title {
     font-size: 12px;
     line-height: 1.5;
-    color: #222;
+    color: #333333;
 }
 
 .square {
     margin: 0;
     counter-reset: li;
     list-style: none;
-    background:rgb(255, 255, 255);
+    background:#E8E8E8;
     padding: 10px;
     align-items: center;
 }
@@ -90,7 +73,7 @@ body {
     position: relative;
     margin: 0 0 10px 2em;
     padding: 1px 8px;
-    border-top: 2px solid rgb(2, 174, 241);
+    border-top: 2px solid #990100;
     transition: .3s linear;
 }
 .square li:last-child {margin-bottom: 0;}
@@ -104,29 +87,29 @@ body {
     box-sizing: border-box;
     margin-right: 8px;
     padding: 1px;
-    border-top: 2px solid rgb(2, 174, 241);
+    border-top: 2px solid #990100;
     border-left: 2px solid transparent;
     border-right: 2px solid transparent;
     border-bottom: 2px solid transparent;
-    background: rgb(2, 174, 241);
-    color: white;
+    background: #990100;
+    color: #E8E8E8;
     font-weight: bold;
     text-align: center;
     transition: .3s linear;
 }
 .square li:hover {
-    border-top: 2px solid white;
+    border-top: 2px solid #E8E8E8;
 }
 
 .square a:hover {
-    color: rgb(2, 174, 241);
+    color: #990100;
     text-decoration: none;
 }
 
 .square li:hover:before {
-    border: 2px solid white;
-    background: white;
-    color: rgb(2, 174, 241);
+    border: 2px solid #E8E8E8;
+    background: #E8E8E8;
+    color: #990100;
 }
 
 .page h2 {
