--- a/page/templates/page/news_list.html
+++ b/page/templates/page/news_list.html
@@ -10,13 +10,15 @@
 </head>
 
 <body>
-    <div class="row">
-        <div class='col-md'>
-            <div class="page-header">
-                <h1><a href="/">Erial!!!</a></h1>
+    <header class="mt-1 mb-1" role="banner">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-2 logotip">
+                    <a href="/"><img src="{% static 'img/Erial-logo.png' %}"></a>
+                </div>
             </div>
         </div>
-    </div>
+    </header>
     <div class="content container">
         <div class="row my-auto">
             <div class='col-sm'>
