--- a/page/templates/page/news_list.html
+++ b/page/templates/page/news_list.html
@@ -19,6 +19,9 @@
             </div>
         </div>
     </header>
+    <div class="main__news">
+        <h1>Главные новости</h1>
+    </div>
     <div class="content container">
         <div class="row my-auto">
             <div class='col-sm'>
@@ -51,6 +54,34 @@
             </div>
             <div class='col-sm'>
                 <div class="block">
+                    <a href='https://regnum.ru/main.html'><img src="{% static 'img/logo-regnum.png' %}"></a>
+                    <ol class='square'>
+                        {% for new in news %}
+                        {% if new.site == 'Regnum' %}
+                        <div class='news'>
+                            <li><a href='{{ new.link }}' class='news-item__title'>{{ new.title }}</a>
+                        </div>
+                        {% endif %}
+                        {% endfor %}
+                    </ol>
+                </div>
+            </div>
+            <div class='col-sm'>
+                <div class="block">
+                    <a href='https://rg.ru/'><img src="{% static 'img/logo_rg_yn.png' %}" alt=""></a>
+                    <ol class='square'>
+                        {% for new in news %}
+                        {% if new.site == 'Rg' %}
+                        <div class='news'>
+                            <li><a href='{{ new.link }}' class='news-item__title'>{{ new.title }}</a>
+                        </div>
+                        {% endif %}
+                        {% endfor %}
+                    </ol>
+                </div>
+            </div>
+            <div class='col-sm'>
+                <div class="block">
                     <a href='https://lenta.ru/'><img src="{% static 'img/logo_lenta.png' %}" alt=""></a>
                     <ol class='square'>
                         {% for new in news %}
@@ -65,10 +96,10 @@
             </div>
             <div class='col-sm'>
                 <div class="block">
-                    <a href='https://regnum.ru/main.html'><img src="{% static 'img/logo-regnum.png' %}"></a>
+                    <a href='https://www.gazeta.ru/'><img src="{% static 'img/logo-gazeta-ru.png' %}"></a>
                     <ol class='square'>
                         {% for new in news %}
-                        {% if new.site == 'Regnum' %}
+                        {% if new.site == 'Gazeta' %}
                         <div class='news'>
                             <li><a href='{{ new.link }}' class='news-item__title'>{{ new.title }}</a>
                         </div>
