--- a/page/static/css/page_news.css
+++ b/page/static/css/page_news.css
@@ -3,7 +3,7 @@ body {
     background-color: #E8E8E8;
 }
 
-.main__news {
+.title {
     text-align: center;
     color: #990100;
     padding-top: 2px;
@@ -109,8 +109,45 @@ body {
 }
 
 .page h2 {
-    padding-bottom: 10px;
-    margin-left: 55px;
-    margin-top: 10px;
+    height: 100px;
+    position: absolute;
+    top: 50%;
+    margin: -50px 0 0 0;
 }
 
+header {
+    width: 100%;
+}
+
+.navbar {
+    padding: 20px 0;
+}
+
+.nav-item {
+    font-weight: 800;
+    text-transform: uppercase;
+    font-size: 20px;
+}
+
+.navbar-light .navbar-nav .nav-item .nav-link:hover,
+.navbar-light .navbar-nav .nav-item.active .nav-link {
+    background: #990100;
+    color: #E8E8E8;
+}
+
+.navbar-light .navbar-nav .nav-item .nav-link {
+    color: #333333;
+    padding: 5px 15px;
+}
+
+.navbar-light .navbar-toggler {
+    border: none;
+    color: #333333;
+    border: 2px solid #7f7f7f;
+    border-radius: 0;
+    outline: none;
+}
+
+.navbar-collapse {
+    background: #E8E8E8;
+}
